Add main index page and update navigation links across multiple pages

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
     </div>
 <div class="bottom-nav">
   <div class="nav-item active"><i class="fas fa-home"></i><span>Actual</span></div>
-  <div class="nav-item" onclick="window.location.href='cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
-  <div class="nav-item" onclick="window.location.href='outils2.html'"><i class="fas fa-toolbox"></i><span>outils</span></div>
-  <div class="nav-item" onclick="window.location.href='contribuer3.html'"><i class="fas fa-hands-helping"></i><span>contribuer</span></div>
-  <div class="nav-item" onclick="window.location.href='profil1.html'"><i class="fas fa-user"></i><span>profil</span></div>
+  <div class="nav-item" onclick="window.location.href='viws/cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
+  <div class="nav-item" onclick="window.location.href='viws/outils2.html'"><i class="fas fa-toolbox"></i><span>outils</span></div>
+  <div class="nav-item" onclick="window.location.href='viws/contribuer3.html'"><i class="fas fa-hands-helping"></i><span>contribuer</span></div>
+  <div class="nav-item" onclick="window.location.href='viws/profil1.html'"><i class="fas fa-user"></i><span>profil</span></div>
 </div>
 
   </div>
