--- a/viws/contribuer3.html
+++ b/viws/contribuer3.html
@@ -254,7 +254,7 @@
 
 <!-- Navigation -->
 <div class="bottom-nav">
-  <div class="nav-item" onclick="window.location.href='index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
+  <div class="nav-item" onclick="window.location.href='../index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
   <div class="nav-item" onclick="window.location.href='cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="window.location.href='outils2.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item active"><i class="fas fa-hands-helping"></i><span>constibuer</span></div>
