--- a/viws/cours.html
+++ b/viws/cours.html
@@ -155,7 +155,7 @@
 
 <!-- Navigation -->
 <div class="bottom-nav">
-  <div class="nav-item" onclick="window.location.href='index.html'"><i class="fas fa-home"></i><span>Cours</span></div>
+  <div class="nav-item" onclick="window.location.href='../index.html'"><i class="fas fa-home"></i><span>Cours</span></div>
   <div class="nav-item active"><i class="fas fa-book"></i><span>Cours</span></div>
    <div class="nav-item" onclick="window.location.href='outils2.html'"><i class="fas fa-toolbox"></i><span>outils</span></div>
    <div class="nav-item" onclick="window.location.href='contribuer3.html'"><i class="fas fa-hands-helping"></i><span>contribuer</span></div>
