--- a/viws/login.html
+++ b/viws/login.html
@@ -196,7 +196,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn-login" href="index.html">Se connecter</button>
+      <button type="submit" class="btn-login" href="../index.html">Se connecter</button>
     </form>
 
     <div class="links">
