--- a/viws/CoursLunix.html
+++ b/viws/CoursLunix.html
@@ -169,7 +169,7 @@
 </div>
 
 <div class="bottom-nav">
-  <div class="nav-item" onclick="location.href='index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
+  <div class="nav-item" onclick="location.href='../index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
   <div class="nav-item active"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="location.href='outils.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item" onclick="location.href='contribuer.html'"><i class="fas fa-hands-helping"></i><span>Contribuer</span></div>
@@ -263,7 +263,7 @@
 </div>
 
 <div class="bottom-nav">
-  <div class="nav-item" onclick="location.href='index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
+  <div class="nav-item" onclick="location.href='../index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
   <div class="nav-item active"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="location.href='outils.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item" onclick="location.href='contribuer.html'"><i class="fas fa-hands-helping"></i><span>Contribuer</span></div>
@@ -355,7 +355,7 @@
 
 <!-- Navigation fixe -->
 <div class="bottom-nav">
-  <div class="nav-item" onclick="location.href='index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
+  <div class="nav-item" onclick="location.href='../index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
     <div class="nav-item" onclick="location.href='cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="location.href='outils.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item active"><i class="fas fa-hands-helping"></i><span>Contribuer</span></div>
