--- a/viws/Journée de reconditionnementCours.html
+++ b/viws/Journée de reconditionnementCours.html
@@ -237,7 +237,7 @@
 
 <!-- Navigation -->
 <div class="bottom-nav">
-  <div class="nav-item" onclick="location.href='index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
+  <div class="nav-item" onclick="location.href='../index.html'"><i class="fas fa-home"></i><span>Accueil</span></div>
     <div class="nav-item" onclick="location.href='cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="location.href='outils2.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item active"><i class="fas fa-hands-helping"></i><span>Contribuer</span></div>
