--- a/viws/profil1.html
+++ b/viws/profil1.html
@@ -112,7 +112,7 @@
 
 <!-- Navigation -->
 <div class="bottom-nav">
-  <div class="nav-item" onclick="window.location.href='index.html'"><i class="fas fa-home"></i><span>Actual</span></div>
+  <div class="nav-item" onclick="window.location.href='../index.html'"><i class="fas fa-home"></i><span>Actual</span></div>
   <div class="nav-item" onclick="window.location.href='cours.html'"><i class="fas fa-book"></i><span>Cours</span></div>
   <div class="nav-item" onclick="window.location.href='outils2.html'"><i class="fas fa-toolbox"></i><span>Outils</span></div>
   <div class="nav-item" onclick="window.location.href='contribuer3.html'"><i class="fas fa-hands-helping"></i><span>Contribuer</span></div>
